--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,9 +1,9 @@
-@import "tailwindcss";
+@import 'tailwindcss';
 
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
-  font-size: minmax(12px, 3vw, 16px);
+  font-size: 16px;
   font-weight: 400;
 
   font-synthesis: none;
